@@ -2,46 +2,39 @@ package main;
 
 import java.util.ArrayList;
 
-public class Player
-{
+public class Player {
     private String name;
     private int score;
-    private ArrayList<Card> deck;
+    ArrayList<Card> deck;
 
     //class references
     private Hand currentHand;
 
-    public Player()
-    {
+    public Player() {
         name = null;
         score = 0;
-        deck = new ArrayList<>();
         ArrayList<Card> hand = new ArrayList<>();
         currentHand = new Hand(hand);
     }
 
     //set the initial deck
-    public void setDeck(ArrayList<Card> playerDeck)
-    {
+    public void setDeck(ArrayList<Card> playerDeck) {
         deck = playerDeck;
     }
 
-    public void drawCard()
-    {
+    public void drawCard() {
         //add card to the current hand
-        currentHand.addCard(deck.removeFirst());
+        Card newCard = deck.remove(0);
+        currentHand.addCard(newCard);
     }
 
-    public Card playCard()
-    {
-        //passing players current hand to update and display
-        currentHand.display();
-        Card chosenCard = currentHand.getCards().getFirst(); //placeholder for UI selection
+    public Card playCard() {
+        Card chosenCard = currentHand.getCards().get(0); //placeholder for UI selection
         currentHand.removeCard(chosenCard);
         return chosenCard;
     }
 
-    private void setScore(int roundScore)
+    public void setScore(int roundScore)
     {
         //update score based on turn
         score += roundScore;
@@ -53,7 +46,7 @@ public class Player
         return score;
     }
 
-    private void setName(String chosenName)
+    public void setName(String chosenName)
     {
         name = chosenName;
     }
@@ -62,4 +55,6 @@ public class Player
     {
         return name;
     }
+
 }
+
